--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Vamos aprender mais sobre o Git.</strong>
+              <strong>Vamos aprender mais sobre o Git no git hub.</strong>
             </h1>
             <hr>
           </div>
